load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "rat-ast",
    srcs = glob([
        "src/*.rs",
        "src/**/*.rs",
    ]),
    deps = [
        "@crates//:id-arena",
        "@crates//:anyhow",
        "@crates//:relooper",
        "@crates//:either",
        "//ratpack/rat-ir",
        "@crates//:syn",
        "@crates//:quote",
        "@crates//:proc-macro2",
    ],
)
