[package]
name = "rat-ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
either.workspace = true
id-arena.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rat-ir = { version = "0.1.0", path = "../rat-ir" }
relooper = "0.1.0"
syn.workspace = true
