[package]
name = "rat-ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
castaway = "0.2.2"
derive_more = "0.99.17"
either.workspace = true
id-arena.workspace = true
once_map.workspace = true
rat-debug = { version = "0.1.0", path = "../rat-debug" }
replace_with = "0.1.7"
serde.workspace = true
