[package]
name = "rat-sleigh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
castaway = "0.2.2"
either.workspace = true
id-arena.workspace = true
jingle_sleigh.workspace = true

rat-ir = { version = "0.1.0", path = "../rat-ir" }

