[package]
name = "rat-tiny-js-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
castaway = "0.2.2"
either.workspace = true
id-arena.workspace = true
proc-macro2 = "1.0.86"
quote.workspace = true
rat-ast = { version = "0.1.0", path = "../rat-ast" }
rat-debug = { version = "0.1.0", path = "../rat-debug" }
rat-ir = { version = "0.1.0", path = "../rat-ir" }
rat-tiny-js = { version = "0.1.0", path = "../rat-tiny-js" }
replace_with = "0.1.7"
serde.workspace = true
swc_common = "0.36.1"
swc_core.workspace = true
swc_ecma_parser = "0.148.1"
swc_ecma_utils.workspace = true
