load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "rat-tiny-js",
    srcs = glob([
        "src/*.rs",
        "src/**/*.rs",
    ]),
    deps = [
        "//ratpack/rat-ast",
        "//ratpack/rat-ir",
        "@crates//:anyhow",
        "@crates//:castaway",
        "@crates//:either",
        "@crates//:id-arena",
        "@crates//:swc_core",
        "@crates//:swc_ecma_utils",
    ],
)
