[package]
name = "rat-tiny-js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
castaway = "0.2.2"
either.workspace = true
id-arena.workspace = true
rat-ast = { version = "0.1.0", path = "../rat-ast" }
rat-debug = { version = "0.1.0", path = "../rat-debug" }
rat-ir = { version = "0.1.0", path = "../rat-ir" }
swc_core.workspace = true
swc_ecma_utils.workspace = true
