[package]
name = "rat-waffle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
castaway = "0.2.2"
derive_more = "0.99.17"
either.workspace = true
id-arena.workspace = true
# more-waffle.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rat-ast = { version = "0.1.0", path = "../rat-ast" }
rat-ir = { version = "0.1.0", path = "../rat-ir" }
syn.workspace = true
portal-pc-waffle.workspace = true
