[package]
name = "rat-waffle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
castaway = "0.2.2"
derive_more = "0.99.17"
either.workspace = true
id-arena.workspace = true
# more-waffle.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rat-ast = { version = "0.1.0", path = "../rat-ast" }
rat-ir = { version = "0.1.0", path = "../rat-ir" }
syn.workspace = true
portal-pc-waffle.workspace = true
quasiquote = "0.1.1"
rat-script = { version = "0.1.0", path = "../rat-script" }
prost = "0.12.6"
prost-types = "0.12.6"
once_cell = "1.19.0"
rand.workspace = true
serde.workspace = true
bytes = "1.6.0"
postcard.workspace = true
trie-rs = { version = "0.4.2", features = ["serde"] }

[build-dependencies]
prost-build = "0.12.6"
